--- a/css/header_sidebar.css
+++ b/css/header_sidebar.css
@@ -12,6 +12,7 @@ header {
     padding-bottom: 20px;
     padding-left: 348px;
     background-color: white;
+    z-index: 110;
 }
 
 header h1 {
@@ -102,6 +103,7 @@ header h1 {
     top: 0;
     padding-top: 64px;
     padding-bottom: 64px;
+    z-index: 120;
 }
 
 .nav-links {
